--- a/src/libdbcppp/CMakeLists.txt
+++ b/src/libdbcppp/CMakeLists.txt
@@ -2,10 +2,10 @@
 include(GNUInstallDirs)
 include(TestBigEndian)
 
-add_library(${PROJECT_NAME} SHARED "")
+add_library(${PROJECT_NAME} SHARED)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES} "libxmlmm")
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} ${catkin_LIBRARIES} ${LIBXML2_LIBRARIES} "libxmlmm")
 
 add_compile_definitions(DBCPPP_EXPORT)
 
